--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+     <meta charset="utf-8"/>
+     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+     <meta name="desctription" content="Aplikacja do podarowywania dzieciom w szpitalach uroczych ręcznie robionych figurek"/>
+     <title>Podaruj Filcaka - uciesz dzieciaka!</title>
 </head>
 <body>
     
