--- a/Witaj.html
+++ b/Witaj.html
@@ -13,8 +13,14 @@
     <div id="tło">
         <h2>Witaj Ponownie!</h2>
         <h3>Zaloguj się, by podarować uśmiech dziecku!</h3>
-        </div>
+        <div class=e318_983><label  class="e318_984">Nazwa użytkownika:</label></div>
+        <input type="text" class="e318_986"></input>
+        <div class=e318_983><label  class="e318_985">Numer telefonu:</label></div>
+        <input type="text" class="e318_987"></input>
+        <button type="button" id="klikol" class="e318_989 ei318_989_1_783 button">Zaloguj</button>
     </div>
     </div>
+    </div>
+    <script src="Przycisk.js"></script>
 </body>
 </html>
